chore(nodejs) Sync.

--- a/bindings/wasm/index.html
+++ b/bindings/wasm/index.html
@@ -10,13 +10,12 @@
       }
 
       #input {
-          flex: 2;
           font-family: monospace;
           margin-right: 1rem;
+          min-width: 40%;
       }
 
       #output {
-          flex: 3;
           font-family: monospace;
           white-space: pre;
       }
