feat(wasm) Create a clean `Gutenberg_Post_Parser` class.

--- a/bindings/wasm/index.html
+++ b/bindings/wasm/index.html
@@ -22,6 +22,7 @@
     </style>
   </head>
   <body>
+    <script src="./gutenberg_post_parser.js"></script>
     <script src="./index.js"></script>
     <textarea id="input" readonly>
 <!-- wp:cover-image {"url":"https://cldup.com/Fz-ASbo2s3.jpg","align":"wide"} -->
