feat(wasm) Move to JavaScript modules.
This is useful to share the code with NodeJS.

--- a/bindings/wasm/bin/index.html
+++ b/bindings/wasm/bin/index.html
@@ -22,8 +22,7 @@
     </style>
   </head>
   <body>
-    <script src="./gutenberg_post_parser.js"></script>
-    <script src="./index.js"></script>
+    <script type="module" src="./index.mjs"></script>
     <textarea id="input" readonly>
 <!-- wp:cover-image {"url":"https://cldup.com/Fz-ASbo2s3.jpg","align":"wide"} -->
 <div class="wp-block-cover-image has-background-dim alignwide" style="background-image:url(https://cldup.com/Fz-ASbo2s3.jpg)">
