--- a/bindings/asmjs/index.html
+++ b/bindings/asmjs/index.html
@@ -23,9 +23,7 @@
   </head>
   <body>
     <script src="./gutenberg_post_parser.asm.js"></script>
-    <script src="../wasm/bin/gutenberg_post_parser.js"></script>
-    <script src="./gutenberg_post_parser.js"></script>
-    <script src="./index.js"></script>
+    <script type="module" src="./index.mjs"></script>
     <textarea id="input" readonly>
 <!-- wp:cover-image {"url":"https://cldup.com/Fz-ASbo2s3.jpg","align":"wide"} -->
 <div class="wp-block-cover-image has-background-dim alignwide" style="background-image:url(https://cldup.com/Fz-ASbo2s3.jpg)">
